# RobloxMemoryAPI

./: .gitignore  CMakeLists.txt  README.md  example.py  pyproject.toml  robloxapi.py  robloxmemoryapi.py
.github/workflows/: publish.yml
data/: offsets.json
docs/: api.md  index.md  types.md
misc/: BytecodeGen.luau
src/robloxmemoryapi/: __init__.py  _version.py
src/robloxmemoryapi/_native/: __init__.py  memory.cpp
src/robloxmemoryapi/data/: offsets.json
src/robloxmemoryapi/utils/: macos.py  memory.py  offsets.py
src/robloxmemoryapi/utils/rbx/: datastructures.py  fflags.py  instance.py
utils/: memory.py  offsets.py  rbxinstance.py
utils/rbx/: datastructures.py  instance.py
