[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "robloxmemoryapi"
version = "0.3.2.1"
description = "Python Library that abstracts reading and writing data from the Roblox DataModel"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { file = "LICENSE.md" }
authors = [
  { name = "upio", email = "notpoiu@users.noreply.github.com" },
  { name = "mstudio45", email = "mstudio45@users.noreply.github.com" },
  { name = "ActualMasterOogway", email = "ActualMasterOogway@users.noreply.github.com" },
]
keywords = ["roblox", "memory", "windows", "macOS"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "requests>=2.0",
  "zstandard>=0.19.0",
  "xxhash>=3.6.0",
  "blake3>=1.0.8",
]

[project.urls]
Homepage = "https://github.com/notpoiu/RobloxMemoryAPI"
Issues = "https://github.com/notpoiu/RobloxMemoryAPI/issues"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/robloxmemoryapi"]

[tool.scikit-build.sdist]
include = [
  "CMakeLists.txt",
  "src/robloxmemoryapi/**/*.cpp",
  "src/robloxmemoryapi/**/*.py",
]
